--- a/repro/project.json
+++ b/repro/project.json
@@ -67,6 +67,18 @@
       },
       "defaultConfiguration": "development"
     },
+    "testserve": {
+      "executor": "@angular-devkit/build-angular:dev-server",
+      "configurations": {
+        "production": {
+          "browserTarget": "repro-app:build:production"
+        },
+        "development": {
+          "browserTarget": "repro-app:build:development"
+        }
+      },
+      "defaultConfiguration": "development"
+    },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
