--- a/repro/project.json
+++ b/repro/project.json
@@ -71,10 +71,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "repro-app:build:production"
+          "browserTarget": "repro-app:testoutput"
         },
         "development": {
-          "browserTarget": "repro-app:build:development"
+          "browserTarget": "repro-app:testoutput"
         }
       },
       "defaultConfiguration": "development"
@@ -102,6 +102,9 @@
         ],
         "scripts": []
       }
-    }
+    },
+	"testoutput": {
+		"command": "echo 'TEST'"
+	}
   }
 }
